// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getVisualizationInstance should create new instances of savedVis, vis and embeddableHandler 1`] = `
Object {
  "description": "",
  "displayName": "visualization",
  "getDisplayName": [Function],
  "getEsType": [Function],
  "id": "",
  "migrationVersion": undefined,
  "savedSearchId": undefined,
  "searchSource": undefined,
  "searchSourceFields": Object {
    "index": "my_index_pattern",
  },
  "title": "",
  "uiStateJSON": "{}",
  "version": 1,
  "visState": Object {
    "type": "area",
  },
}
`;

exports[`getVisualizationInstanceInput should create new instances of savedVis, vis and embeddableHandler 1`] = `
Vis {
  "data": Object {},
  "description": "",
  "id": undefined,
  "params": Object {
    "addLegend": true,
    "addTooltip": true,
    "isDonut": true,
    "labels": Object {
      "last_level": true,
      "show": false,
      "truncate": 100,
      "values": true,
    },
    "legendPosition": "right",
    "type": "pie",
  },
  "title": "",
  "type": Object {
    "schemas": Object {
      "all": Array [],
    },
  },
  "uiState": Object {
    "vis": Object {
      "colors": Object {
        "Count": "#1F78C1",
      },
    },
  },
}
`;

exports[`getVisualizationInstanceInput should create new instances of savedVis, vis and embeddableHandler 2`] = `
Object {
  "description": "",
  "displayName": "visualization",
  "getDisplayName": [Function],
  "getEsType": [Function],
  "id": "",
  "migrationVersion": undefined,
  "savedSearchId": undefined,
  "searchSource": undefined,
  "title": "",
  "uiStateJSON": "{\\"vis\\":{\\"colors\\":{\\"Count\\":\\"#1F78C1\\"}}}",
  "version": 1,
  "visState": null,
}
`;
